--- a/about.html
+++ b/about.html
@@ -6,37 +6,45 @@
 		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
         <link rel="shortcut icon" href="images/banner.png" />
 		<link href="css/master.css" rel="stylesheet" type="text/css" />
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
 <div class="container">
 
-<img src="images/banner.png" class="banner"/>
+	<img src="images/banner.png" class="banner"/>
 
 	<nav>
-	<ul>
- 		<li><a href="home.html">HOME</a></li>
- 	  <li><a href="showreel.html">SHOWREEL</a></li>
- 	 	<li><a href="vfx.html">VFX</a></li>
- 	 	<li><a href="design.html">DESIGN</a></li>
-	  <li><a href="photo.html">PHOTO</a></li>
- 	 	<li><a href="about.html" id="about-menu">ABOUT</a></li>
- 		<li><a href="contact.html">CONTACT</a></li>
-	</ul>
+		<ul>
+	 		<li><a href="home.html">HOME</a></li>
+	 	    <li><a href="showreel.html">SHOWREEL</a></li>
+	 	 	<li><a href="vfx.html">VFX</a></li>
+	 	 	<li><a href="design.html">DESIGN</a></li>
+		    <li><a href="photo.html">PHOTO</a></li>
+	 	 	<li><a href="about.html" id="about-menu">ABOUT</a></li>
+	 		<li><a href="contact.html">CONTACT</a></li>
+		</ul>
 	</nav>
 
-<br>
-
-<div ID="myself-pic">
-<img src="images/myself.jpg" style="width:301px;height:461px;" alt="Myself"/>
+	<div class="about">
+		
+			<img src="images/myself.jpg" style="width:420px; height:650px;" alt="Myself"/>
+	
+			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang set foot in the industry of visual effects. After becoming familiar with 2D graphics programs, he taught himself industrial-level 3D packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from Communication University of China with a Bachelor Degree in Digital Media Arts and came to Purdue University to begin his master program. As a visual effect artist, he is always looking forward to creating something elegant and telling an impressive story.</p>
+		
+	</div>
 </div>
 
-<div ID="bio">
-<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang set foot in the industry of visual effects. After becoming familiar with 2D graphics programs, he taught himself industrial-level 3D packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from Communication University of China with a Bachelor Degree in Digital Media Arts and came to Purdue University to begin his master program. As a visual effect artist, he is always looking forward to creating something elegant and telling an impressive story.</p>
+<div class="icons">
+	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
+	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
+	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
+	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
+	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
+	<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
+	<a href="http1://weibo.com/2775542052" class="fa fa-weibo"></a>
 </div>
-
-
 
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
