--- a/contact.html
+++ b/contact.html
@@ -28,21 +28,20 @@
 	</ul>
 	</nav>
 
-<br>
-
 <div ID="email">
 	<p>zhangwenyu7@gmail.com</p>
 </div>
 
-<br>
-
 <div class="icons">
-<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
-<a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
-<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
-<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
-<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
-<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
+	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
+	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
+	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
+	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
+	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
+	<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
+	<a href="http1://weibo.com/2775542052" class="fa fa-weibo"></a>
+</div>
+
 </div>
 
 <footer>
