--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-		<title>Andy Zhang|Portfolio</title>
+		<title>Andy Zhang | Portfolio</title>
 		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
-        <link rel="shortcut icon" href="images/banner.png" />
+	    <link rel="shortcut icon" href="images/avatar.jpg" />
 		<link href="css/master.css" rel="stylesheet" type="text/css" />
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
 
 	<nav>
 	<ul>
- 		<li><a href="home.html">HOME</a></li>
+ 		<li><a href="home.html" id="home-menu">HOME</a></li>
  	    <li><a href="showreel.html">SHOWREEL</a></li>
  	 	<li><a href="vfx.html">VFX</a></li>
  	 	<li><a href="design.html">DESIGN</a></li>
@@ -26,17 +27,24 @@
 	</ul>
 	</nav>
 
-<br>
+<p></p>
 
-div class="cover">
-<img src="images/cover.jpg" style="width:100%" />
+<div class="icons">
+	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
+	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
+	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
+	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
+	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
+	<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
+	<a href="http1://weibo.com/2775542052" class="fa fa-weibo"></a>
+</div>
+
 </div>
 
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
 </footer>
 
-</div>
 
 </body>
 </html>
