--- a/photo.html
+++ b/photo.html
@@ -2,10 +2,11 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-		<title>Andy Zhang|Portfolio</title>
-		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
-        <link rel="shortcut icon" href="images/banner.png" />
-		<link href="css/master.css" rel="stylesheet" type="text/css" />
+	<title>Andy Zhang|Portfolio</title>
+	<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel="shortcut icon" href="images/avatar.jpg" />
+	<link href="css/photo.css" rel="stylesheet" type="text/css" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -26,8 +27,6 @@
 	</ul>
 	</nav>
 
-<br>
-
 <!--<div class="gallery">
 <img src="images/IMG_0224.jpg" />
 <img src="images/IMG_0025(PS).jpg" />
@@ -36,7 +35,7 @@
 <img src="images/IMG_9896(PS).jpg" />
 <img src="images/IMG_007.jpg" />
 </div>
--->
+
 
 <div class="gallery">
   <a href="images/IMG_9896(PS).jpg">
@@ -66,12 +65,32 @@
   <a href="images/IMG_0025(PS).jpg">
     <img src="images/IMG_0025(PS).jpg" alt="b" width="500px" height="350px">
   </a>
+</div>-->
+
+	<div class="container2">	
+		
+		<div id="app"></div>
+	</div>
+	<script src="js/common.js"></script>
+	<script src="js/bundle.js"></script>
+	<script src="js/app.js"></script>
+
+
+<div class="icons">
+	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
+	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
+	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
+	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
+	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
+	<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
+	<a href="http1://weibo.com/2775542052" class="fa fa-weibo"></a>
+</div>
+
 </div>
 
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
 </footer>
-
 
 
 </body>
