--- a/showreel.html
+++ b/showreel.html
@@ -2,10 +2,11 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-		<title>Andy Zhang|Portfolio</title>
-		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
-        <link rel="shortcut icon" href="images/banner.png" />
-		<link href="css/master.css" rel="stylesheet" type="text/css" />
+	<title>Andy Zhang|Portfolio</title>
+	<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel="shortcut icon" href="images/avatar.jpg" />
+	<link href="css/master.css" rel="stylesheet" type="text/css" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -17,23 +18,33 @@
 	<nav>
 	<ul>
  		<li><a href="home.html">HOME</a></li>
- 	  <li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
+ 	    <li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
  	 	<li><a href="vfx.html">VFX</a></li>
  	 	<li><a href="design.html">DESIGN</a></li>
-	  <li><a href="photo.html">PHOTO</a></li>
+	    <li><a href="photo.html">PHOTO</a></li>
  	 	<li><a href="about.html">ABOUT</a></li>
  		<li><a href="contact.html">CONTACT</a></li>
 	</ul>
 	</nav>
 
-<br>
 
-<div class="showreel">
-<iframe src="https://player.vimeo.com/video/210145177?title=0&byline=0&portrait=0" width="800px" height="480px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	<div class="showreel">
+		<iframe src="https://player.vimeo.com/video/210145177?title=0&byline=0&portrait=0" width="880" height="500" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	</div>
+
+	<div id="sheet">
+		<a href="files/Wenyu_2017Showreel_Shot Breakdown.pdf" target="_blank"><i>Shot Breakdown Sheet</i></a>
+	</div>
 </div>
 
-<div ID="sheet">
-<a href="files/Wenyu_2017Showreel_Shot Breakdown.pdf" target="_blank">Shot Breakdown Sheet</a>
+<div class="icons">
+	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
+	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
+	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
+	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
+	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
+	<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
+	<a href="http1://weibo.com/2775542052" class="fa fa-weibo"></a>
 </div>
 
 <footer>
