--- a/vfx.html
+++ b/vfx.html
@@ -4,8 +4,9 @@
 <head>
 		<title>Andy Zhang|Portfolio</title>
 		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
-        <link rel="shortcut icon" href="images/banner.png" />
+        <link rel="shortcut icon" href="images/avatar.jpg" />
 		<link href="css/master.css" rel="stylesheet" type="text/css" />
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -26,20 +27,29 @@
 	</ul>
 	</nav>
 
-<br>
+	<!--<div class="vfx-works">
+		<li><a href="#">All</a></li>
+		<li><a href="#">Film</a></li>
+		<li><a href="#">Still</a></li>
+	</div>-->
 
-<div class="floating-box">
-	<iframe src="https://player.vimeo.com/video/181273975?title=0&byline=0&portrait=0" width="540" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	<div class="video-gallery">
+		<iframe src="https://player.vimeo.com/video/181273975?title=0&byline=0&portrait=0" width="550" height="310" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		<iframe src="https://player.vimeo.com/video/153671854?title=0&byline=0&portrait=0" width="550" height="310" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		<iframe src="https://player.vimeo.com/video/214308081?title=0&byline=0&portrait=0" width="550" height="310" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	</div>
+
 </div>
 
-<div class="floating-box">
-	<iframe src="https://player.vimeo.com/video/153671854?title=0&byline=0&portrait=0" width="540" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="icons">
+	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
+	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
+	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
+	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
+	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
+	<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
+	<a href="http1://weibo.com/2775542052" class="fa fa-weibo"></a>
 </div>
-
-<div class="floating-box">
-	<iframe src="https://player.vimeo.com/video/150784491?title=0&byline=0&portrait=0" width="540" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</div>
-
 
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
