--- a/design.html
+++ b/design.html
@@ -4,9 +4,11 @@
 <head>
 		<title>Andy Zhang|Portfolio</title>
 		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
-        <link rel="shortcut icon" href="images/banner.png" />
+        <link rel="shortcut icon" href="images/avatar.jpg" />
 		<link href="css/design.css" rel="stylesheet" type="text/css" />
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
      	<script type="text/javascript" src="https://cdn.bootcss.com/d3/3.5.17/d3.js"></script>
+     	<script type="text/javascript" src="js/design_tabs.js"></script>
 </head>
 
 
@@ -18,58 +20,83 @@
 
     	<nav>
     	  <ul>
-    	 		<li><a href="home.html">HOME</a></li>
-    	 	  <li><a href="showreel.html">SHOWREEL</a></li>
-    	 	 	<li><a href="vfx.html">VFX</a></li>
-    	 	 	<li><a href="design.html" id="design-menu">DESIGN</a></li>
-    			<li><a href="photo.html">PHOTO</a></li>
-    	 	 	<li><a href="about.html">ABOUT</a></li>
-    	 		<li><a href="contact.html">CONTACT</a></li>
+    	 	<li><a href="home.html">HOME</a></li>
+    	 	<li><a href="showreel.html">SHOWREEL</a></li>
+    	 	<li><a href="vfx.html">VFX</a></li>
+    	 	<li><a href="design.html" id="design-menu">DESIGN</a></li>
+    	    <li><a href="photo.html">PHOTO</a></li>
+    	 	<li><a href="about.html">ABOUT</a></li>
+    	    <li><a href="contact.html">CONTACT</a></li>
     	  </ul>
     	</nav>
-			</div>
-		<div id='content'>
-    <div id="design-projects">
-    	 <li><a class="infographics" href="#">Infographics</a></li>
-    	 <li><a class="mobile-app" href="#">Mobile App Design</a></li>
-       <li><a class="epics" href="#">EPICS Project</a></li>
+	</div>
+
+	<div class="design-content">
+   
+		<div class="tab">
+		  <button class="tablinks" onclick="openCity(event, 'London')" id="defaultOpen">London</button>
+		  <button class="tablinks" onclick="openCity(event, 'Paris')">Mobile App Design</button>
+		  <button class="tablinks" onclick="openCity(event, 'Tokyo')">EPICS Project</button>
+		</div>
+
+		<div id="London" class="tabcontent">
+		  <h3>London</h3>		    
+		</div>
+
+		<div id="Paris" class="tabcontent">
+		  <h3>Paris</h3>		  
+		</div>
+
+		<div id="Tokyo" class="tabcontent">
+		  <h3>Tokyo</h3>		  
 		</div>
 
 
-    <div id="bubble-chart">
-        <div id="bubble-chart-title">
-            <h4>Minimum Wage Worldwide 2015</h4>
-        </div>
-        <style type="text/css">
-            circle:hover {
-                -webkit-transform: scale(1.6);
-                -ms-transform: scale(1.5);
-                -o-transform: scale(1.5);
-                transform: scale(1.5);
-                z-index: 1;
-                display: block;
-            }
-            * {
-                -webkit-transition: all 0.5s ease-in-out;
-                -moz-transition: all 0.5s ease-in-out;
-                -ms-transition: all 0.5s ease-in-out;
-                -o-transition: all 0.5s ease-in-out;
-                transition: all 0.5s ease-in-out;
-                transform-origin: 50% 50% 0;
-            }
-        </style>
-        <script type="text/javascript" src="js/bubble-chart.js"></script>
+		<div id="bubble-chart">
+	        <div id="bubble-chart-title">
+	            <h4>Minimum Wage Worldwide 2015</h4>
+	        </div>
+	        <style type="text/css">
+	            circle:hover {
+	                -webkit-transform: scale(1.6);
+	                -ms-transform: scale(1.5);
+	                -o-transform: scale(1.5);
+	                transform: scale(1.5);
+	                z-index: 1;
+	                display: block;
+	            }
+	            * {
+	                -webkit-transition: all 0.5s ease-in-out;
+	                -moz-transition: all 0.5s ease-in-out;
+	                -ms-transition: all 0.5s ease-in-out;
+	                -o-transition: all 0.5s ease-in-out;
+	                transition: all 0.5s ease-in-out;
+	                transform-origin: 50% 50% 0;
+	            }
+	        </style>
+        	<script type="text/javascript" src="js/bubble-chart.js"></script>
         <div id="bubble-chart-info">
             <p>In this infographics work, I used the form of bubble chart to gain the insight of different minimum wage of different countries in the world. I used d3.js to create the visualization.</p>
         </div>
-    </div>
+    	</div>
+    
+	
+
+<div class="icons">
+	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
+	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
+	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
+	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
+	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
+	<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
+	<a href="http1://weibo.com/2775542052" class="fa fa-weibo"></a>
 </div>
 
-    <footer>
-        <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
-    </footer>
-
 </div>
+
+<footer>
+    <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
+</footer>
 
 </body>
 </html>
