--- a/about.html
+++ b/about.html
@@ -16,15 +16,20 @@
 	<img src="images/banner.png" class="banner"/>
 
 	<nav>
-		<ul>
-	 		<li><a href="home.html">HOME</a></li>
-	 	    <li><a href="showreel.html">SHOWREEL</a></li>
-	 	 	<li><a href="vfx.html">VFX</a></li>
-	 	 	<li><a href="design.html">DESIGN</a></li>
-		    <li><a href="photo.html">PHOTO</a></li>
-	 	 	<li><a href="about.html" id="about-menu">ABOUT</a></li>
-	 		<li><a href="contact.html">CONTACT</a></li>
-		</ul>
+		 <ul>
+    	 	<li><a href="home.html">HOME</a></li>
+    	 	<li><a href="showreel.html">SHOWREEL</a></li>
+    	 	<li><a href="vfx.html">VFX</a></li>
+    	 	<li class="dropdown"><a href="design.html">DESIGN</a>
+    	 		<div class="dropdown-content">
+	    	 		<a href="design-a.html">Infographics</a>
+	    	 		<a href="design-b.html">Mobile App Design</a>
+	    	 		<a href="design-c.html">EPICS Project</a>
+    	 		</div>
+    	 	</li>
+    	 	<li><a href="about.html" id="about-menu">ABOUT</a></li>
+    	    <li><a href="contact.html">CONTACT</a></li>
+    	  </ul>
 	</nav>
 
 	<div class="about">
@@ -43,7 +48,7 @@
 	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
 	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
 	<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
-	<a href="http1://weibo.com/2775542052" class="fa fa-weibo"></a>
+	<a href="http://weibo.com/2775542052" class="fa fa-weibo"></a>
 </div>
 
 <footer>
