--- a/design-c.html
+++ b/design-c.html
@@ -36,11 +36,14 @@
     	</nav>
 	</div>
 
-	<div class="design-content-blank">
-        <p></p>
-   	</div>
-    
+<div class="design-content">
+	<div class="epics">
+		<h3><a href="https://engineering.purdue.edu/EPICS" target="_blank">EPICS</a> is a service-learning design program in which teams of students partner with local and global community organizations to address human, community, and environmental needs. This semester I joined LSME Team and worked as a Web Master. LSME (Learning Science and Math Through Education) works with K-12 students to help strengthen their Mathematics and Science skills and in turn develop an appreciation for engineering. Our team's official website is <a href="https://epics.ecn.purdue.edu/lsme/" target="_blank">here</a>.</h3>
+ 	</div>
+</div>
 	
+
+
 </div>
 
 <footer>
