--- a/design-b.html
+++ b/design-b.html
@@ -18,7 +18,7 @@
 	<div id="banner">
     <img src="images/banner.png" class="banner"/>
 
-    	<nav>
+    <nav>
     	  <ul>
     	 	<li><a href="home.html">HOME</a></li>
     	 	<li><a href="showreel.html">SHOWREEL</a></li>
@@ -36,11 +36,23 @@
     	</nav>
 	</div>
 
-	<div class="design-content-blank">
-        <p></p>
-   	</div>
-    
-	
+<div class="design-content">
+	<div class="mobile-app">
+		<h4>My mobile app design is about an alarm product for private coach. It integrates alarms with personal schedule, which is useful for a fitness coach to manage his time and students information. Design document can be found <a href="files\Wenyu_App_Design.pdf" target="_blank">here</a>.</h4>
+		<div id="mobile-app-img">
+			<img src="images\design\mobile\1.PNG"/>			
+			<img src="images\design\mobile\3.PNG"/>
+			<img src="images\design\mobile\4.PNG"/>
+			<img src="images\design\mobile\5.PNG"/>
+			<img src="images\design\mobile\6.PNG"/>
+			<img src="images\design\mobile\7.PNG"/>
+			<img src="images\design\mobile\8.PNG"/>
+			<img src="images\design\mobile\9.PNG"/>
+		</div>
+	</div>		
+</div>
+
+
 </div>
 
 <footer>
