--- a/photo.html
+++ b/photo.html
@@ -16,15 +16,21 @@
 <img src="images/banner.png" class="banner"/>
 
 	<nav>
-	<ul>
- 		<li><a href="home.html">HOME</a></li>
- 	    <li><a href="showreel.html">SHOWREEL</a></li>
- 	 	<li><a href="vfx.html">VFX</a></li>
- 	 	<li><a href="design.html">DESIGN</a></li>
-	  	<li><a href="photo.html" id="photo-menu">PHOTO</a></li>
- 	 	<li><a href="about.html">ABOUT</a></li>
- 		<li><a href="contact.html">CONTACT</a></li>
-	</ul>
+	 <ul>
+    	 	<li><a href="home.html">HOME</a></li>
+    	 	<li><a href="showreel.html">SHOWREEL</a></li>
+    	 	<li><a href="vfx.html">VFX</a></li>
+    	 	<li class="dropdown"><a href="design.html" id="design-menu">DESIGN</a>
+    	 		<div class="dropdown-content">
+	    	 		<a href="design-a.html">Infographics</a>
+	    	 		<a href="design-b.html">Mobile App Design</a>
+	    	 		<a href="design-c.html">EPICS Project</a>
+    	 		</div>
+    	 	</li>
+    	    <li><a href="photo.html">PHOTO</a></li>
+    	 	<li><a href="about.html">ABOUT</a></li>
+    	    <li><a href="contact.html">CONTACT</a></li>
+    	  </ul>
 	</nav>
 
 <!--<div class="gallery">
