--- a/about.html
+++ b/about.html
@@ -16,23 +16,28 @@
 	<img src="images/banner.png" class="banner"/>
 
 	<nav>
-		<ul>
-	 		<li><a href="home.html">HOME</a></li>
-	 	    <li><a href="showreel.html">SHOWREEL</a></li>
-	 	 	<li><a href="vfx.html">VFX</a></li>
-	 	 	<li><a href="design.html">DESIGN</a></li>
-		    <li><a href="photo.html">PHOTO</a></li>
-	 	 	<li><a href="about.html" id="about-menu">ABOUT</a></li>
-	 		<li><a href="contact.html">CONTACT</a></li>
-		</ul>
+		 <ul>
+    	 	<li><a href="home.html">HOME</a></li>
+    	 	<li><a href="showreel.html">SHOWREEL</a></li>
+    	 	<li><a href="vfx.html">VFX</a></li>
+    	 	<li class="dropdown"><a href="design.html">DESIGN</a>
+    	 		<div class="dropdown-content">
+	    	 		<a href="design-a.html">Infographics</a>
+	    	 		<a href="design-b.html">Mobile App Design</a>
+	    	 		<a href="design-c.html">EPICS Project</a>
+    	 		</div>
+    	 	</li>
+    	 	<li><a href="about.html" id="about-menu">ABOUT</a></li>
+    	    <li><a href="contact.html">CONTACT</a></li>
+    	  </ul>
 	</nav>
 
 	<div class="about">
-		
-			<img src="images/myself.jpg" style="width:420px; height:650px;" alt="Myself"/>
-	
+
+			<img src="images/myself.jpg" style="width:320px; height:500px;" alt="Myself"/>
+
 			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang set foot in the industry of visual effects. After becoming familiar with 2D graphics programs, he taught himself industrial-level 3D packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from Communication University of China with a Bachelor Degree in Digital Media Arts and came to Purdue University to begin his master program. As a visual effect artist, he is always looking forward to creating something elegant and telling an impressive story.</p>
-		
+
 	</div>
 </div>
 
@@ -43,14 +48,12 @@
 	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
 	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
 	<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
-	<a href="http1://weibo.com/2775542052" class="fa fa-weibo"></a>
+	<a href="http://weibo.com/2775542052" class="fa fa-weibo"></a>
 </div>
 
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
 </footer>
-
-
 
 </body>
 </html>
