--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 
 			<img src="images/myself.jpg" style="width:320px; height:500px;" alt="Myself"/>
 
-			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang set foot in the industry of visual effects. After becoming familiar with 2D graphics programs, he taught himself industrial-level 3D packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from Communication University of China with a Bachelor Degree in Digital Media Arts and came to Purdue University to begin his master program. As a visual effect artist, he is always looking forward to creating something elegant and telling an impressive story.</p>
+			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang set foot in the industry of visual effects. After becoming familiar with 2D graphics programs, he taught himself industrial-level 3D packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from<a href="http://en.cuc.edu.cn">Communication University of China</a> with a Bachelor Degree in Digital Media Arts and came to <a href="www.purdue.edu">Purdue University</a> to begin his master program. As a visual effect artist, he is always looking forward to creating something elegant and telling an impressive story.</p>
 
 	</div>
 </div>
