--- a/about.html
+++ b/about.html
@@ -2,13 +2,12 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-		<title>Andy Zhang | Portfolio</title>
+		<title>Andy Zhang|Portfolio</title>
 		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="shortcut icon" href="images/banner.png" />
+        <link rel="shortcut icon" href="images/banner.png" />
 		<link href="css/master.css" rel="stylesheet" type="text/css" />
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
 
 <div class="container">
@@ -16,28 +15,21 @@
 	<img src="images/banner.png" class="banner"/>
 
 	<nav>
-		 <ul>
-    	 	<li><a href="home.html">HOME</a></li>
-    	 	<li><a href="showreel.html">SHOWREEL</a></li>
+		<ul>
+    	 	<li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
     	 	<li><a href="vfx.html">VFX</a></li>
-    	 	<li class="dropdown"><a href="design.html">DESIGN</a>
-    	 		<div class="dropdown-content">
-	    	 		<a href="design-a.html">Infographics</a>
-	    	 		<a href="design-b.html">Mobile App Design</a>
-	    	 		<a href="design-c.html">EPICS Project</a>
-    	 		</div>
-    	 	</li>
-    	 	<li><a href="about.html" id="about-menu">ABOUT</a></li>
+    	 	<li><a href="photo.html">PHOTO</a></li>
+    	 	<li><a href="blog.html">BLOG</li>
+    	 	<li><a href="about.html">ABOUT</a></li>
     	    <li><a href="contact.html">CONTACT</a></li>
-    	  </ul>
+    	</ul>
 	</nav>
 
 	<div class="about">
-
-			<img src="images/myself.jpg" style="width:320px; height:500px;" alt="Myself"/>
-
-			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang set foot in the industry of visual effects. After becoming familiar with 2D graphics programs, he taught himself industrial-level 3D packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from<a href="http://en.cuc.edu.cn">Communication University of China</a> with a Bachelor Degree in Digital Media Arts and came to <a href="http://www.purdue.edu">Purdue University</a> to begin his master program. As a visual effect artist, he is always looking forward to creating something elegant and telling an impressive story.</p>
-
+		
+			<img src="images/myself.jpg" style="width:420px; height:650px;" alt="Myself"/>
+	
+			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang set foot in the industry of visual effects. After becoming familiar with 2D graphics programs, he taught himself industrial-level 3D packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> (CUC最牛逼) with a Bachelor Degree in Digital Media Arts and came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a>  (Boiler Up!) to begin his master program. As a visual effect artist, he is always looking forward to creating something elegant and telling an impressive story.</p>		
 	</div>
 </div>
 
@@ -54,6 +46,8 @@
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
 </footer>
+
+
 
 </body>
 </html>
