--- a/blog.html
+++ b/blog.html
@@ -13,15 +13,16 @@
 <h4>Junior 3D Generalist</h4>
 
 <div class="active">
-<ul>
-  <li><a href="home.html">HOME</a></li>
-  <li><a href="showreel.html">SHOWREEL</a></li>
-  <li><a href="vfx.html">VFX</a></li>
-  <li><a href="photography.html">PHOTO</a></li>
-  <li><a href="blog.html">BLOG</a></li>
-  <li><a href="about.html">ABOUT</a></li>
-  <li><a href="contact.html">CONTACT</a></li>
-</ul>
+<nav>
+    <ul>
+        <li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
+        <li><a href="vfx.html">VFX</a></li>
+        <li><a href="photo.html">PHOTO</a></li>
+        <li><a href="blog.html">BLOG</li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
+  </nav>
 </div>
 
 <br>
