--- a/showreel.html
+++ b/showreel.html
@@ -16,20 +16,14 @@
 <img src="images/banner.png" class="banner"/>
 
 	<nav>
-	 <ul>
-    	 	<li><a href="home.html">HOME</a></li>
+		<ul>
     	 	<li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
     	 	<li><a href="vfx.html">VFX</a></li>
-    	 	<li class="dropdown"><a href="design.html">DESIGN</a>
-    	 		<div class="dropdown-content">
-	    	 		<a href="design-a.html">Infographics</a>
-	    	 		<a href="design-b.html">Mobile App Design</a>
-	    	 		<a href="design-c.html">EPICS Project</a>
-    	 		</div>
-    	 	</li>
+    	 	<li><a href="photo.html">PHOTO</a></li>
+    	 	<li><a href="blog.html">BLOG</li>
     	 	<li><a href="about.html">ABOUT</a></li>
     	    <li><a href="contact.html">CONTACT</a></li>
-    	  </ul>
+    	</ul>
 	</nav>
 
 
