--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-		<title>Andy Zhang | Portfolio</title>
-		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
-	    <link rel="shortcut icon" href="images/avatar.jpg" />
-		<link href="css/master.css" rel="stylesheet" type="text/css" />
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<title>Andy Zhang | Portfolio</title>
+	<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel="shortcut icon" href="images/avatar.jpg" />
+	<link href="css/master.css" rel="stylesheet" type="text/css" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -16,24 +16,24 @@
 <img src="images/banner.png" class="banner"/>
 
 	<nav>
-	 <ul>
-    	 	<li><a href="home.html" id="home-menu">HOME</a></li>
-    	 	<li><a href="showreel.html">SHOWREEL</a></li>
+		<ul>
+    	 	<li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
     	 	<li><a href="vfx.html">VFX</a></li>
-    	 	<li class="dropdown"><a href="design.html" >DESIGN</a>
-    	 		<div class="dropdown-content">
-	    	 		<a href="design-a.html">Infographics</a>
-	    	 		<a href="design-b.html">Mobile App Design</a>
-	    	 		<a href="design-c.html">EPICS Project</a>
-    	 		</div>
-    	 	</li>
+    	 	<li><a href="photo.html">PHOTO</a></li>
+    	 	<li><a href="blog.html">BLOG</li>
     	 	<li><a href="about.html">ABOUT</a></li>
     	    <li><a href="contact.html">CONTACT</a></li>
-    	  </ul>
+    	</ul>
 	</nav>
 
-<div class="placeholder">
-<p></p>
+
+	<div class="showreel">
+		<iframe src="https://player.vimeo.com/video/210145177?title=0&byline=0&portrait=0" width="880" height="500" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	</div>
+
+	<div id="sheet">
+		<a href="files/Wenyu_2017Showreel_Shot Breakdown.pdf" target="_blank"><i>Shot Breakdown Sheet</i></a>
+	</div>
 </div>
 
 <div class="icons">
@@ -44,8 +44,6 @@
 	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
 	<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
 	<a href="http://weibo.com/2775542052" class="fa fa-weibo"></a>
-</div>
-
 </div>
 
 <footer>
