--- a/photo.html
+++ b/photo.html
@@ -2,93 +2,44 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Andy Zhang|Portfolio</title>
-	<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="shortcut icon" href="images/avatar.jpg" />
-	<link href="css/photo.css" rel="stylesheet" type="text/css" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<title>Andy Zhang | Portfolio</title>
+  <meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+  <link rel="shortcut icon" href="images/avatar.jpg" />
+  <link href="css/master.css" rel="stylesheet" type="text/css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
 
 <div class="container">
 
 <img src="images/banner.png" class="banner"/>
 
-	<nav>
+  <nav>
     <ul>
         <li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
         <li><a href="vfx.html">VFX</a></li>
         <li><a href="photo.html">PHOTO</a></li>
         <li><a href="blog.html">BLOG</li>
         <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
       </ul>
   </nav>
 
-<!--<div class="gallery">
-<img src="images/IMG_0224.jpg" />
-<img src="images/IMG_0025(PS).jpg" />
-<img src="images/IMG_0283(PS).jpg" />
-<img src="images/IMG_0447(PS).jpg" />
-<img src="images/IMG_9896(PS).jpg" />
-<img src="images/IMG_007.jpg" />
+  
 </div>
-
-
-<div class="gallery">
-  <a href="images/IMG_9896(PS).jpg">
-    <img src="images/IMG_9896(PS).jpg" alt="e" width="500" height="350">
-  </a>
-</div>
-
-<div class="gallery">
-  <a href="images/IMG_0283(PS).jpg">
-    <img src="images/IMG_0283(PS).jpg" alt="c" width="500px" height="350px">
-  </a>
-</div>
-
-<div class="gallery">
-  <a href="images/IMG_0447(PS).jpg">
-    <img src="images/IMG_0447(PS).jpg" alt="d" width="500px" height="350px">
-  </a>
-</div>
-
-<div class="gallery">
-  <a href="images/IMG_0224.jpg">
-    <img src="images/IMG_0224.jpg" alt="a" width="500px" height="350px">
-  </a>
-</div>
-
-<div class="gallery">
-  <a href="images/IMG_0025(PS).jpg">
-    <img src="images/IMG_0025(PS).jpg" alt="b" width="500px" height="350px">
-  </a>
-</div>-->
-
-	<div class="container2">	
-		
-		<div id="app"></div>
-	</div>
-	<script src="js/common.js"></script>
-	<script src="js/bundle.js"></script>
-	<script src="js/app.js"></script>
-
 
 <div class="icons">
-	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
-	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
-	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
-	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
-	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
-	<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
-	<a href="http1://weibo.com/2775542052" class="fa fa-weibo"></a>
-</div>
-
+  <a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
+  <a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
+  <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
+  <a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
+  <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
+  <a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
+  <a href="http://weibo.com/2775542052" class="fa fa-weibo"></a>
 </div>
 
 <footer>
-<p>&copy;2017 Andy Zhang | All Rights Reserved</p>
+<p>&copy;2017 Wenyu Zhang | All Rights Reserved</p>
 </footer>
 
 
