--- a/blog.html
+++ b/blog.html
@@ -2,33 +2,46 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-		<title>Andy Zhang|Portfolio</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<link href="css/master.css" rel="stylesheet" type="text/css" />
+  <title>Andy Zhang | Portfolio</title>
+  <meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel="shortcut icon" href="images/avatar.jpg" />
+  <link href="css/master.css" rel="stylesheet" type="text/css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
 
-<h1>ANDY ZHANG</h1>
-<h4>Junior 3D Generalist</h4>
+<div class="container">
 
-<div class="active">
-<nav>
+<img src="images/banner.png" class="banner"/>
+
+  <nav>
     <ul>
         <li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
         <li><a href="vfx.html">VFX</a></li>
         <li><a href="photo.html">PHOTO</a></li>
         <li><a href="blog.html">BLOG</li>
         <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
       </ul>
   </nav>
+
+  
 </div>
 
-<br>
-
-
+<div class="icons">
+  <a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
+  <a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
+  <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
+  <a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
+  <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
+  <a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
+  <a href="http://weibo.com/2775542052" class="fa fa-weibo"></a>
 </div>
+
+<footer>
+<p>&copy;2017 Wenyu Zhang | All Rights Reserved</p>
+</footer>
+
 
 </body>
 </html>
