--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<link href="css/master.css" rel="stylesheet" type="text/css" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
 
 <div class="container">
@@ -25,7 +24,6 @@
     	    <li><a href="contact.html">CONTACT</a></li>
     	</ul>
 	</nav>
-
 
 	<div class="showreel">
 		<iframe src="https://player.vimeo.com/video/210145177?title=0&byline=0&portrait=0" width="880" height="500" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -47,7 +45,7 @@
 </div>
 
 <footer>
-<p>&copy;2017 Andy Zhang | All Rights Reserved</p>
+<p>&copy;2017 Wenyu Zhang | All Rights Reserved</p>
 </footer>
 
 
