--- a/vfx.html
+++ b/vfx.html
@@ -26,12 +26,6 @@
     	</ul>
 	</nav>
 
-	<!--<div class="vfx-works">
-		<li><a href="#">All</a></li>
-		<li><a href="#">Film</a></li>
-		<li><a href="#">Still</a></li>
-	</div>-->
-
 	<div class="video-gallery">
 		<iframe src="https://player.vimeo.com/video/181273975?title=0&byline=0&portrait=0" width="550" height="310" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		<iframe src="https://player.vimeo.com/video/153671854?title=0&byline=0&portrait=0" width="550" height="310" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -41,7 +35,7 @@
 </div>
 
 <footer>
-<p>&copy;2017 Andy Zhang | All Rights Reserved</p>
+<p>&copy;2017 Wenyu Zhang | All Rights Reserved</p>
 </footer>
 
 <div class="icons">
