--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,12 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-		<title>Andy Zhang | Portfolio</title>
-		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
-		<link href="css/master.css" rel="stylesheet" type="text/css" />
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<title>Andy Zhang | Portfolio</title>
+	<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+	<link href="css/master.css" rel="stylesheet" type="text/css" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 </head>
-
-
 <body>
 
 <div class="container">
@@ -44,7 +42,7 @@
 </div>
 
 <footer>
-<p>&copy;2017 Andy Zhang | All Rights Reserved</p>
+<p>&copy;2017 Wenyu Zhang | All Rights Reserved</p>
 </footer>
 
 </body>
