--- a/about.html
+++ b/about.html
@@ -29,18 +29,19 @@
 		
 			<img src="images/myself.jpg" style="width:420px; height:650px;" alt="Myself"/>
 	
-			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang set foot in the industry of visual effects. After becoming familiar with 2D graphics programs, he taught himself industrial-level 3D packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> (CUC最牛逼) with a Bachelor Degree in Digital Media Arts and came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a>  (Boiler Up!) to begin his master program. As a visual effect artist, he is always looking forward to creating something elegant and telling an impressive story.</p>		
+			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang set foot in the industry of visual effects. After becoming familiar with 2D graphics programs, he taught himself industrial-level 3D packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> (CUC最牛逼) with a Bachelor Degree in Digital Media Arts and came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a>  (Boiler Up!) to begin his master program. As a visual effects artist, he is always looking forward to creating something elegant and telling an impressive story.</p>
+			<p><a href="files/AndyZhang_resume.pdf" target="_blank"><i>Resume</p>
 	</div>
 </div>
 
 <div class="icons">
-	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
-	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
-	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
-	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
-	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
-	<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
-	<a href="http://weibo.com/2775542052" class="fa fa-weibo"></a>
+	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
+	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
+	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin" target="_blank"></a>
+	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
+	<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
+	<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
 </div>
 
 <footer>
