--- a/photo.html
+++ b/photo.html
@@ -12,30 +12,30 @@
 
 <div class="container">
 
-<img src="images/banner.png" class="banner"/>
+  <img src="images/banner.png" class="banner"/>
 
-  <nav>
-    <ul>
-        <li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
-        <li><a href="vfx.html">VFX</a></li>
-        <li><a href="photo.html">PHOTO</a></li>
-        <li><a href="blog.html">BLOG</li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-      </ul>
-  </nav>
+    <nav>
+      <ul>
+          <li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
+          <li><a href="vfx.html">VFX</a></li>
+          <li><a href="photo.html">PHOTO</a></li>
+          <li><a href="blog.html">BLOG</li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </nav>
 
   
 </div>
 
 <div class="icons">
-  <a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
-  <a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
-  <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
-  <a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
-  <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
-  <a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
-  <a href="http://weibo.com/2775542052" class="fa fa-weibo"></a>
+  <a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
+  <a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
+  <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+  <a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin" target="_blank"></a>
+  <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
+  <a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
+  <a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
 </div>
 
 <footer>
