--- a/showreel.html
+++ b/showreel.html
@@ -35,13 +35,13 @@
 </div>
 
 <div class="icons">
-	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
-	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
-	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
-	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
-	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
-	<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
-	<a href="http://weibo.com/2775542052" class="fa fa-weibo"></a>
+	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
+	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
+	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin" target="_blank"></a>
+	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
+	<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
+	<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
 </div>
 
 <footer>
