--- a/about.html
+++ b/about.html
@@ -2,53 +2,48 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Andy Zhang|Portfolio</title>
+	<title>Andy Zhang | Portfolio</title>
 	<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="shortcut icon" href="images/banner.png" />
+    <link rel="shortcut icon" href="images/avatar.jpg" />
 	<link href="css/master.css" rel="stylesheet" type="text/css" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
-<div class="container">
-
 	<img src="images/banner.png" class="banner"/>
 
-	<nav>
-		<ul>
-    	 	<li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
-    	 	<li><a href="vfx.html">VFX</a></li>
-    	 	<li><a href="photo.html">PHOTO</a></li>
-    	 	<li><a href="blog.html">BLOG</li>
-    	 	<li><a href="about.html">ABOUT</a></li>
-    	    <li><a href="contact.html">CONTACT</a></li>
-    	</ul>
-	</nav>
+	 <nav>     
+      <li><a href="showreel.html">SHOWREEL</a></li>
+      <li><a href="vfx.html">VFX</a></li>
+      <li><a href="photo.html">PHOTO</a></li>
+      <li><a href="blog.html">BLOG</li>
+      <li><a href="about.html" id="about-menu">ABOUT</a></li>
+      <li><a href="contact.html">CONTACT</a></li>       
+    </nav>
+
+<div class="container">
 
 	<div class="about">
 		
-			<img src="images/myself.jpg" style="width:420px; height:650px;" alt="Myself"/>
+			<img src="images/myself.jpg" style="width:335px; height:500px;" alt="Myself"/>
 	
-			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang set foot in the industry of visual effects. After becoming familiar with 2D graphics programs, he taught himself industrial-level 3D packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> (CUC最牛逼) with a Bachelor Degree in Digital Media Arts and came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a>  (Boiler Up!) to begin his master program. As a visual effects artist, he is always looking forward to creating something elegant and telling an impressive story.</p>
+			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang set foot in the industry of visual effects. After becoming familiar with 2D graphics programs, he taught himself industrial-level 3D packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> (CUC最牛逼) with a Bachelor Degree in Digital Media Arts and came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a>  (Boiler Up!) to begin his master program. As a visual effects artist, he is always looking forward to creating something elegant and telling an impressive story.</p>			
 			<p><a href="files/AndyZhang_resume.pdf" target="_blank"><i>Resume</p>
 	</div>
 </div>
 
-<div class="icons">
-	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
-	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
-	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
-	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin" target="_blank"></a>
-	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
-	<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-	<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
-</div>
-
 <footer>
-<p>&copy;2017 Wenyu Zhang | All Rights Reserved</p>
+	<p>&copy;2017 Wenyu Zhang | All Rights Reserved</p>
+	<div class="icons">
+		<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
+		<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
+		<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+		<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin" target="_blank"></a>
+		<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
+		<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
+		<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
+	</div>
 </footer>
-
-
 
 </body>
 </html>
