--- a/contact.html
+++ b/contact.html
@@ -4,47 +4,45 @@
 <head>
 	<title>Andy Zhang | Portfolio</title>
 	<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel="shortcut icon" href="images/avatar.jpg" />
 	<link href="css/master.css" rel="stylesheet" type="text/css" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
 </head>
 <body>
 
-<div class="container">
-
 <img src="images/banner.png" class="banner"/>
 
-	<nav>
-		<ul>
-    	 	<li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
-    	 	<li><a href="vfx.html">VFX</a></li>
-    	 	<li><a href="photo.html">PHOTO</a></li>
-    	 	<li><a href="blog.html">BLOG</li>
-    	 	<li><a href="about.html">ABOUT</a></li>
-    	    <li><a href="contact.html">CONTACT</a></li>
-    	</ul>
-	</nav>
+	 <nav>     
+      <li><a href="showreel.html">SHOWREEL</a></li>
+      <li><a href="vfx.html">VFX</a></li>
+      <li><a href="photo.html">PHOTO</a></li>
+      <li><a href="blog.html">BLOG</li>
+      <li><a href="about.html">ABOUT</a></li>
+      <li><a href="contact.html" id="contact-menu">CONTACT</a></li>       
+    </nav>
+
+<div class="container">
 
 <div ID="email">
 	<p><a href="mailto: zhangwenyu7@gmail.com">zhangwenyu7@gmail.com</a></p>
 </div>
 
-
-<div class="icons">
-	<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
-	<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
-	<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
-	<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin" target="_blank"></a>
-	<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
-	<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-	<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
-</div>
-
 </div>
 
 <footer>
-<p>&copy;2017 Wenyu Zhang | All Rights Reserved</p>
+	<p>&copy;2017 Wenyu Zhang | All Rights Reserved</p>
+	<div class="icons">
+		<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
+		<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
+		<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+		<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin" target="_blank"></a>
+		<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
+		<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
+		<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
+	</div>
 </footer>
+
+
 
 </body>
 </html>
